<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="radarlivre.com.radarlivreandroid.application.activities.AboutProjectActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_200">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_height="220dp"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:contentScrim="@color/md_blue_grey_800"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleTextAppearance="@style/HidedText"
            app:collapsedTitleTextAppearance="@style/BlueText">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:src="@mipmap/logo"
                android:scaleType="centerInside"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/mainScrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white_1000">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/project_title_1"
                    android:textSize="18dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"/>

                <TextView
                    android:text="@string/project_descrip_1"
                    android:textSize="12dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="6dp"/>


                <TextView
                    android:text="@string/project_title_2"
                    android:textSize="18dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"/>

                <TextView
                    android:text="@string/project_descrip_2"
                    android:textSize="12dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="6dp"/>

                <TextView
                    android:text="@string/project_title_3"
                    android:textSize="18dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"/>

                <TextView
                    android:text="@string/project_descrip_3"
                    android:textSize="12dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="6dp"/>

                <TextView
                    android:text="@string/project_title_4"
                    android:textSize="18dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"/>

                <TextView
                    android:text="@string/project_descrip_4"
                    android:textSize="12dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="6dp"/>

                <TextView
                    android:text="@string/project_title_5"
                    android:textSize="18dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"/>

                <TextView
                    android:text="@string/project_descrip_5"
                    android:textSize="12dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="6dp"/>

                <TextView
                    android:text="@string/project_title_6"
                    android:textSize="18dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"/>

                <TextView
                    android:text="@string/project_descrip_6"
                    android:textSize="12dp"
                    android:textColor="@color/md_blue_grey_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="6dp"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>